docs/2.6.0/docs/daml-finance/packages/interfaces/daml-finance-interface-instrument-bond.rst
.. Copyright (c) 2023 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
.. SPDX-License-Identifier: Apache-2.0

Daml.Finance.Interface.Instrument.Bond
######################################

This package contains the *interface* definitions for bond instruments. It contains the following
modules:

- :ref:`FixedRate.Instrument <module-daml-finance-interface-instrument-bond-fixedrate-instrument-43896>`:
  Instrument interface for fixed-rate bonds
- :ref:`FixedRate.Factory <module-daml-finance-interface-instrument-bond-fixedrate-factory-42532>`:
  Factory interface to instantiate fixed-rate bond instruments
- :ref:`FixedRate.Types <module-daml-finance-interface-instrument-bond-fixedrate-types-40221>`:
  Common types used across fixed-rate bond instruments
- :ref:`FloatingRate.Instrument <module-daml-finance-interface-instrument-bond-floatingrate-instrument-46777>`:
  Instrument interface for floating-rate bonds
- :ref:`FloatingRate.Factory <module-daml-finance-interface-instrument-bond-floatingrate-factory-53843>`:
  Factory interface to instantiate floating-rate bond instruments
- :ref:`FloatingRate.Types <module-daml-finance-interface-instrument-bond-floatingrate-types-45430>`:
  Common types used across floating-rate bond instruments
- :ref:`InflationLinked.Instrument <module-daml-finance-interface-instrument-bond-inflationlinked-instrument-38495>`:
  Instrument interface for inflation-linked bonds
- :ref:`InflationLinked.Factory <module-daml-finance-interface-instrument-bond-inflationlinked-factory-57553>`:
  Factory interface to instantiate inflation-linked bond instruments
- :ref:`InflationLinked.Types <module-daml-finance-interface-instrument-bond-inflationlinked-types-71908>`:
  Common types used across inflation-linked bond instruments
- :ref:`ZeroCoupon.Instrument <module-daml-finance-interface-instrument-bond-zerocoupon-instrument-59755>`:
  Instrument interface for zero-coupon bonds
- :ref:`ZeroCoupon.Factory <module-daml-finance-interface-instrument-bond-zerocoupon-factory-70433>`:
  Factory interface to instantiate zero-coupon bond instruments
- :ref:`ZeroCoupon.Types <module-daml-finance-interface-instrument-bond-zerocoupon-types-74248>`:
  Common types used across zero-coupon bond instruments

Changelog
*********

.. .. toctree::
   :titlesonly:
   :maxdepth: 1

   Changelog <changelogs/daml-finance-interface-instrument-bond>
