docs/2.7.5/docs/daml-finance/packages/interfaces/daml-finance-interface-instrument-bond.rst
.. Copyright (c) 2023 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
.. SPDX-License-Identifier: Apache-2.0

Daml.Finance.Interface.Instrument.Bond
######################################

This package contains the *interface* definitions for bond instruments. It contains the following
modules:

- :ref:`Callable.Instrument <module-daml-finance-interface-instrument-bond-callable-instrument-70617>`:
  Instrument interface for callable bonds
- :ref:`Callable.Factory <module-daml-finance-interface-instrument-bond-callable-factory-92299>`:
  Factory interface to instantiate callable bond instruments
- :ref:`Callable.Types <module-daml-finance-interface-instrument-bond-callable-types-46430>`:
  Type definitions to support callable bond instruments
- :ref:`FixedRate.Instrument <module-daml-finance-interface-instrument-bond-fixedrate-instrument-43896>`:
  Instrument interface for fixed-rate bonds
- :ref:`FixedRate.Factory <module-daml-finance-interface-instrument-bond-fixedrate-factory-42532>`:
  Factory interface to instantiate fixed-rate bond instruments
- :ref:`FixedRate.Types <module-daml-finance-interface-instrument-bond-fixedrate-types-40221>`:
  Type definitions to support fixed-rate bond instruments
- :ref:`FloatingRate.Instrument <module-daml-finance-interface-instrument-bond-floatingrate-instrument-46777>`:
  Instrument interface for floating-rate bonds
- :ref:`FloatingRate.Factory <module-daml-finance-interface-instrument-bond-floatingrate-factory-53843>`:
  Factory interface to instantiate floating-rate bond instruments
- :ref:`FloatingRate.Types <module-daml-finance-interface-instrument-bond-floatingrate-types-45430>`:
  Type definitions to support floating-rate bond instruments
- :ref:`InflationLinked.Instrument <module-daml-finance-interface-instrument-bond-inflationlinked-instrument-38495>`:
  Instrument interface for inflation-linked bonds
- :ref:`InflationLinked.Factory <module-daml-finance-interface-instrument-bond-inflationlinked-factory-57553>`:
  Factory interface to instantiate inflation-linked bond instruments
- :ref:`InflationLinked.Types <module-daml-finance-interface-instrument-bond-inflationlinked-types-71908>`:
  Type definitions to support inflation-linked bond instruments
- :ref:`ZeroCoupon.Instrument <module-daml-finance-interface-instrument-bond-zerocoupon-instrument-59755>`:
  Instrument interface for zero-coupon bonds
- :ref:`ZeroCoupon.Factory <module-daml-finance-interface-instrument-bond-zerocoupon-factory-70433>`:
  Factory interface to instantiate zero-coupon bond instruments
- :ref:`ZeroCoupon.Types <module-daml-finance-interface-instrument-bond-zerocoupon-types-74248>`:
  Type definitions to support zero-coupon bond instruments
- :ref:`Types <module-daml-finance-interface-instrument-bond-types-92661>`:
  Type definitions common to different types of bonds

Changelog
*********
